[package]
name = "cash"
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "3.0.0-beta.1" # CLI options parser
chrono = "0.4" # date/time handling
# serialization/deserialization
serde = "^1.0"
serde_derive = "^1.0"
serde_cbor = "0.11.1"
