[package]
name = "cash"
version = "0.1.0"
authors = ["Andrea Pavoni <andrea.pavoni@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI options parser
clap = "3.0.0-beta.1"
# date/time handling
chrono = "0.4"
# serialization/deserialization
serde = "^1.0"
serde_derive = "^1.0"
serde_cbor = "0.11.1"
